(executables
 (names test)
 (libraries alcotest mirage-random-test lwt.unix logs
   logs.fmt mirage-profile mirage-flow mirage-vnetif mirage-clock-unix
   pcap-format duration mirage-random rresult mirage-protocols
   mirage-stack arp arp-mirage ethernet tcpip.ipv4 tcpip.tcp tcpip.udp
   tcpip.stack-direct tcpip.icmpv4 tcpip.udpv4-socket tcpip.tcpv4-socket
   tcpip.icmpv4-socket tcpip.stack-socket tcpip.ipv6))

(alias
 (name runtest)
 (deps
  (:< test.exe))
 (action
  (run %{<} -q -e --color=always)))
