(test
 (name test)
 (libraries alcotest mirage-random-test lwt.unix logs logs.fmt mirage-profile
   mirage-flow mirage-vnetif mirage-clock-unix pcap-format duration
   mirage-random arp arp.mirage ethernet tcpip.ipv4 tcpip.tcp tcpip.udp
   tcpip.stack-direct tcpip.icmpv4 tcpip.udpv4-socket tcpip.tcpv4-socket
   tcpip.icmpv4-socket tcpip.stack-socket tcpip.ipv6 ipaddr-cstruct
   macaddr-cstruct tcpip)
 (action
  (run %{test} -q -e --color=always)))
