(library
 (name icmpv4_socket)
 (public_name tcpip.icmpv4-socket)
 (modules icmpv4_socket)
 (wrapped false)
 (libraries lwt.unix ipaddr.unix cstruct-lwt tcpip.icmpv4
   tcpip.ipv4 tcpip.ipv6 mirage-protocols))

(library
 (name udpv4_socket)
 (public_name tcpip.udpv4-socket)
 (modules udpv4_socket)
 (wrapped false)
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt mirage-protocols))

(library
 (name udpv6_socket)
 (public_name tcpip.udpv6-socket)
 (modules udpv6_socket)
 (wrapped false)
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt mirage-protocols))

(library
 (name tcp_socket_options)
 (public_name tcpip.tcp_socket_options)
 (modules tcp_socket_options)
 (c_names tcp_socket_options_stubs)
 (wrapped false)
 (libraries lwt.unix duration))

(library
 (name tcpv4_socket)
 (public_name tcpip.tcpv4-socket)
 (modules tcpv4_socket tcp_socket)
 (wrapped false)
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt mirage-protocols
   tcp_socket_options))

(library
 (name tcpv6_socket)
 (public_name tcpip.tcpv6-socket)
 (modules tcpv6_socket)
 (wrapped false)
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt mirage-protocols
   tcpv4_socket tcp_socket_options))

(library
 (name tcpip_stack_socket)
 (public_name tcpip.stack-socket)
 (modules tcpip_stack_socket ipv4_socket ipv6_socket)
 (wrapped false)
 (libraries lwt.unix cstruct-lwt ipaddr.unix logs
   tcpip.tcpv4-socket tcpip.udpv4-socket tcpip.ipv4 tcpip.ipv6 tcpip.icmpv4
   mirage-protocols mirage-stack))
