(library
 (name icmpv4_socket)
 (public_name tcpip.icmpv4-socket)
 (modules icmpv4_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt tcpip.icmpv4 tcpip.ipv4
   tcpip.ipv6))

(library
 (name udpv4_socket)
 (public_name tcpip.udpv4-socket)
 (modules udpv4_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt logs))

(library
 (name udpv6_socket)
 (public_name tcpip.udpv6-socket)
 (modules udpv6_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt logs))

(library
 (name udpv4v6_socket)
 (public_name tcpip.udpv4v6-socket)
 (modules udpv4v6_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt logs))

(library
 (name tcp_socket_options)
 (public_name tcpip.tcp_socket_options)
 (modules tcp_socket_options)
 (foreign_stubs
  (language c)
  (names tcp_socket_options_stubs)
  (flags :standard))
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix duration))

(library
 (name tcpv4_socket)
 (public_name tcpip.tcpv4-socket)
 (modules tcpv4_socket tcp_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt tcpip tcp_socket_options
   logs))

(library
 (name tcpv6_socket)
 (public_name tcpip.tcpv6-socket)
 (modules tcpv6_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt tcpip tcpv4_socket
   tcp_socket_options logs))

(library
 (name tcpv4v6_socket)
 (public_name tcpip.tcpv4v6-socket)
 (modules tcpv4v6_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix ipaddr.unix cstruct-lwt fmt tcpip tcpv4_socket
   tcp_socket_options logs))

(library
 (name tcpip_stack_socket)
 (public_name tcpip.stack-socket)
 (modules tcpip_stack_socket ipv4_socket ipv6_socket ipv4v6_socket)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (libraries lwt.unix cstruct-lwt ipaddr.unix logs tcpip.tcpv4-socket
   tcpip.udpv4-socket tcpip.ipv4 tcpip.tcpv6-socket tcpip.udpv6-socket
   tcpip.ipv6 tcpip.tcpv4v6-socket tcpip.udpv4v6-socket))
