(library
 (name tcp)
 (public_name tcpip.tcp)
 (libraries   logs mirage-protocols-lwt ipaddr cstruct 
                rresult mirage-profile io-page tcpip-checksum duration
                randomconv fmt mirage-time-lwt mirage-clock
                mirage-random lwt-dllist)
 (preprocess (pps ppx_cstruct)))
