(library
 (name tcpip_checksum)
 (public_name tcpip.checksum)
 (modules tcpip_checksum)
 (instrumentation
  (backend bisect_ppx))
 (libraries cstruct)
 (foreign_stubs
  (language c)
  (names checksum_stubs)
  (flags :standard))
 (wrapped false))

(library
 (name tcpip_unix)
 (public_name tcpip.unix)
 (modules tcpip_unix))
